Added a CFP and an activities page

--- a/_source/_layouts/haml/default.haml
+++ b/_source/_layouts/haml/default.haml
@@ -23,6 +23,8 @@
             %li
               %a{ :href => "/organizers.html" } Organizers
             %li
+              %a{ :href => "/activities.html" } Activities
+            %li
               %a{ :href => "/schedule.html" } Schedule
     .jumbotron.masthead
       .inner
@@ -48,3 +50,12 @@
           and
           = succeed "." do
             %a{ :href => "https://github.com/connatser/hyde" } Hyde
+    :javascript
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-496232-10']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
