--- a/_source/_layouts/pages/important_dates.haml
+++ b/_source/_layouts/pages/important_dates.haml
@@ -9,14 +9,23 @@ title: Important Dates
       %th
         Paper Submission Deadline
       %th
-        ?
+        2nd March 2012
+    %tr
+      %th
+        Notification
+      %th
+        16th March 2012
     %tr
       %th
         Paper Camera-Ready Deadline
       %th
-        ?
+        2nd April 2012
     %tr
       %th
-        Workshop
+        Early registration for ICWSM'12
       %th
-        ?
+        6th April 2012
+    %th
+      Workshop
+    %th
+      4th June 2012
