--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -30,6 +30,9 @@
               <a href='/organizers.html'>Organizers</a>
             </li>
             <li>
+              <a href='/activities.html'>Activities</a>
+            </li>
+            <li>
               <a href='/schedule.html'>Schedule</a>
             </li>
           </ul>
@@ -73,5 +76,17 @@
         </p>
       </footer>
     </div>
+    <script type='text/javascript'>
+      //<![CDATA[
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-496232-10']);
+        _gaq.push(['_trackPageview']);
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
+      //]]>
+    </script>
   </body>
 </html>
