--- a/_source/_layouts/pages/organizers.haml
+++ b/_source/_layouts/pages/organizers.haml
@@ -5,11 +5,11 @@ title: Organizers
 
 %ul.unstyled
   %li
-    = succeed ", University College Dublin" do
+    = succeed ", University College Dublin, daniel&#46;archambault&#64;ucd&#46;ie" do
       %a{ :href => "http://www.cliquecluster.org/content/daniel-archambault" } Daniel Archambault
   %li
-    = succeed ", IBM Research" do
+    = succeed ", IBM Research, eser&#64;us&#46;ibm&#46;com" do
       %a{ :href => "http://researcher.ibm.com/view.php?person=us-eser" } Eser Kandogan
   %li
-    = succeed ", University College Dublin" do
+    = succeed ", University College Dublin, martin.harrigan&#64;ucd&#46;ie" do
       %a{ :href => "http://www.martinharrigan.ie" } Martin Harrigan
