--- a/_source/_layouts/pages/call_for_papers.haml
+++ b/_source/_layouts/pages/call_for_papers.haml
@@ -93,7 +93,10 @@ title: Call for Papers
   Papers are limited to 4 pages. Papers must be formatted according to
   = succeed "." do
     %a{ :href => "http://www.aaai.org/Publications/Author/formatting-instructions.pdf" } AAAI guidelines
-  Papers in PDF format must be submitted using EasyChair to the conference organizers by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  Papers in PDF format must be submitted using
+  %a{ :href => "http://www.easychair.org/conferences/?conf=socmedvis2012" }
+    EasyChair
+  to the conference organizers by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
 
 %p
   The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
@@ -104,7 +107,7 @@ title: Call for Papers
 %p
   For more information please visit the workshop web page at
   %a{ :href => "http://socmedvis.ucd.ie" } http://socmedvis.ucd.ie
-  or send email to any of the organizers.
+  or email socmedvis&#64;ucd&#46;ie.
 
 %p
   Regards,
