Moved the navigation bar down and switched the colors

--- a/_source/_layouts/default.html
+++ b/_source/_layouts/default.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta content='text/html; charset=utf-8' http-equiv='content-type' />
+    <meta content='no-cache' http-equiv='Cache-Control' />
+    <meta content='no-cache' http-equiv='Pragma' />
+    <meta content='0' http-equiv='Expires' />
     <title>
       Workshop on Social Media Visualization (SocMedVis)
     </title>
@@ -10,6 +13,23 @@
     <link href='/css/style.css' rel='stylesheet' type='text/css' />
   </head>
   <body>
+    <div class='jumbotron masthead'>
+      <div class='inner'>
+        <div class='container'>
+          <h1>
+            Workshop on Social Media Visualization (SocMedVis)
+          </h1>
+          <p class='lead'>
+            in conjunction with
+            <a href='http://www.icwsm.org'>the International AAAI Conference on Weblogs and Social Media</a>
+            &nbsp;
+            <a href='http://www.icwsm.org'>
+              <img height='25px' src='media/icwsm_logo.png' width='121px' />
+            </a>
+          </p>
+        </div>
+      </div>
+    </div>
     <div class='topbar'>
       <div class='fill'>
         <div class='container'>
@@ -27,7 +47,7 @@
               <a href='/submissions.html'>Submissions</a>
             </li>
             <li>
-              <a href='/organizers.html'>Organizers</a>
+              <a href='/organizers_and_program_committee.html'>Organizers</a>
             </li>
             <li>
               <a href='/activities.html'>Activities</a>
@@ -36,19 +56,6 @@
               <a href='/schedule.html'>Schedule</a>
             </li>
           </ul>
-        </div>
-      </div>
-    </div>
-    <div class='jumbotron masthead'>
-      <div class='inner'>
-        <div class='container'>
-          <h1>
-            Workshop on Social Media Visualization (SocMedVis)
-          </h1>
-          <p class='lead'>
-            in conjunction with
-            <a href='http://www.icwsm.org/'>the International AAAI Conference on Weblogs and Social Media (ICWSM'12)</a>
-          </p>
         </div>
       </div>
     </div>
