--- a/_source/_layouts/pages/organizers_and_program_committee.haml
+++ b/_source/_layouts/pages/organizers_and_program_committee.haml
@@ -1,8 +1,10 @@
 \---
 layout: default
-title: Organizers
+title: Organizers & Program Committee
 \---
 
+%h2
+  Organizers
 %ul.unstyled
   %li
     = succeed ", University College Dublin, daniel&#46;archambault&#64;ucd&#46;ie" do
@@ -13,3 +15,7 @@ title: Organizers
   %li
     = succeed ", University College Dublin, martin.harrigan&#64;ucd&#46;ie" do
       %a{ :href => "http://www.martinharrigan.ie" } Martin Harrigan
+%h2
+  Program Committee
+%p
+  To be announced.
