--- a/_source/_layouts/sass/style.scss
+++ b/_source/_layouts/sass/style.scss
@@ -20,7 +20,7 @@ html, body {
 
 .page-header {
   background-color: #F5F5F5;
-  padding: 20px 20px 10px;
+  padding: 40px 20px 10px;
   margin: -20px -20px 20px;
 }
 
@@ -36,13 +36,32 @@ html, body {
   }
 }
 
+.topbar {
+  top: inherit;
+  position: inherit;
+}
+
 .topbar .btn {
   border: 0;
 }
 
+.topbar a {
+  color: white;
+}
+
+.topbar div > ul a:hover, .nav a:hover {
+  color: #C0C0C0;
+  text-decoration: none;
+}
+
+.topbar div > ul .active > a, .nav .active > a {
+  background-color: inherit;
+  background-color: inherit;
+}
+
 .jumbotron {
   min-width: 940px;
-  padding-top: 40px;
+  padding-top: 0px;
   .inner {
     padding: 45px 0;
     -webkit-box-shadow: inset 0 10px 30px rgba(0, 0, 0, 0.3);
@@ -73,12 +92,29 @@ html, body {
 }
 
 .masthead {
-  background-color: #049CD9;
+  background-color: #909090;
   background-repeat: no-repeat;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#004d9f), to(#049cd9));
-  background-image: -webkit-linear-gradient(#004d9f, #049cd9);
-  background-image: -moz-linear-gradient(#004d9f, #049cd9);
-  background-image: -o-linear-gradient(top, #004d9f, #049cd9);
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#004d9f), to(#049cd9));
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#004D9F', endColorstr='#049CD9', GradientType=0);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#000000), to(#909090));
+  background-image: -webkit-linear-gradient(#000000, #909090);
+  background-image: -moz-linear-gradient(#000000, #909090);
+  background-image: -o-linear-gradient(top, #000000, #909090);
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#000000), to(#909090));
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#909090', GradientType=0);
+}
+
+.topbar-inner, .topbar .fill {
+  background-color: #004D9F;
+  background-color: #004D9F;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#049CD9), to(#004D9F));
+  background-image: -moz-linear-gradient(top, #049CD9, #004D9F);
+  background-image: -ms-linear-gradient(top, #049CD9, #004D9F);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049CD9), color-stop(100%, #004D9F));
+  background-image: -webkit-linear-gradient(top, #049CD9, #004D9F);
+  background-image: -o-linear-gradient(top, #049CD9, #004D9F);
+  background-image: linear-gradient(top, #049CD9, #004D9F);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#049CD9', endColorstr='#004D9F', GradientType=0);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
