--- a/_source/_layouts/pages/call_for_papers.haml
+++ b/_source/_layouts/pages/call_for_papers.haml
@@ -3,7 +3,7 @@ layout: default
 title: Call for Papers
 \---
 
-%h3{ :style => "line-height: 100%" }
+%h3{ :style => "line-height: 1.5em;" }
   Workshop on Social Media Visualization (SocMedVis)
   %br
   at
@@ -11,26 +11,19 @@ title: Call for Papers
   %br
   4th June 2012, Dublin, Ireland
   %br
-  %br
   %a{ :href => "http://socmedvis.ucd.ie" } http://socmedvis.ucd.ie
   %br
-  %br
-  %br
- 
+%br
 %p
   Social media study and analysis brings researchers from many fields into a single setting. Even though the tasks of these researchers are varied, data visualization and analytics plays an important role. For industry and academics alike, visualization of social media data helps with hypothesis formation and supports the explanation of phenomena.
-
 %p
   The Workshop on Social Media Visualization (SocMedVis) will be held in conjunction with
   %a{ :href => "http://www.icwsm.org/" } the International AAAI Conference on Weblogs and Social Media (ICWSM'12)
   in Dublin on 4th June 2012. The workshop is a venue for presentation of research and applications of visualization of social media data.
-
 %p
   The goal of the workshop is to bring together researchers and industry practitioners interested in visual and interactive techniques for social media analysis to discuss their potential application to the social sciences, humanities, and industry.  We solicit contributions that discuss novel techniques and applications of visualization and visual analytics approaches to social media data sources.
- 
 %h3
   Important Dates
-
 %ul.unstyled
   %li
     %strong
@@ -43,13 +36,10 @@ title: Call for Papers
     Early registration for ICWSM'12: 6th April 2012
   %li
     Workshop: 4th June 2012
-
 %h3
   Topics
-
 %p
   We invite research, application, and position papers on the topic of visualization and social media. Topics of interest include but are not limited to:
-
 %ul
   %li
     Visual Analysis of Evolving Social Media Data
@@ -83,30 +73,24 @@ title: Call for Papers
     Studies of Analytic Work on Social Media
   %li
     Representations of Uncertainty in Text Analytics
-
 %h3
   Submissions
-
 %p
-  Papers are limited to 4 pages. Papers must be formatted according to
+  Papers are limited to 4 pages in length and should have a visualization or visual analytics component to them. Papers must be formatted according to
   = succeed "." do
     %a{ :href => "http://www.aaai.org/Publications/Author/formatting-instructions.pdf" } AAAI guidelines
   Papers in PDF format must be submitted using
   %a{ :href => "http://www.easychair.org/conferences/?conf=socmedvis2012" }
     EasyChair
   by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
-
 %p
   The program will also include a madness session at the beginning of the workshop to allow anyone attending the workshop to briefly introduce themselves, their work, and state their positions and goals related to the scope of the workshop. If you are planning to attend the workshop you are welcome to send an email to conference organizers to ensure a slot in the madness session by 2nd April 2012.
-
 %p
   We also plan to host a panel of researchers in social sciences and humanities and industrial researchers of varied perspectives on the application of visualization to academic disciplines and industry where visualization is needed to understand social media data.
-
 %p
   For more information please visit the workshop web page at
   %a{ :href => "http://socmedvis.ucd.ie" } http://socmedvis.ucd.ie
   or email socmedvis&#64;ucd&#46;ie.
-
 %p
   Regards,
   %ul.unstyled
