--- a/_source/css/style.css
+++ b/_source/css/style.css
@@ -17,7 +17,7 @@ html, body {
 
 .page-header {
   background-color: #F5F5F5;
-  padding: 20px 20px 10px;
+  padding: 40px 20px 10px;
   margin: -20px -20px 20px; }
 
 .content .span10 {
@@ -28,12 +28,27 @@ html, body {
   padding-left: 19px;
   border-left: 1px solid #EEE; }
 
+.topbar {
+  top: inherit;
+  position: inherit; }
+
 .topbar .btn {
   border: 0; }
 
+.topbar a {
+  color: white; }
+
+.topbar div > ul a:hover, .nav a:hover {
+  color: #C0C0C0;
+  text-decoration: none; }
+
+.topbar div > ul .active > a, .nav .active > a {
+  background-color: inherit;
+  background-color: inherit; }
+
 .jumbotron {
   min-width: 940px;
-  padding-top: 40px; }
+  padding-top: 0px; }
   .jumbotron .inner {
     padding: 45px 0;
     -webkit-box-shadow: inset 0 10px 30px rgba(0, 0, 0, 0.3);
@@ -57,11 +72,27 @@ html, body {
     font-weight: bold; }
 
 .masthead {
-  background-color: #049CD9;
+  background-color: #909090;
   background-repeat: no-repeat;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#004d9f), to(#049cd9));
-  background-image: -webkit-linear-gradient(#004d9f, #049cd9);
-  background-image: -moz-linear-gradient(#004d9f, #049cd9);
-  background-image: -o-linear-gradient(top, #004d9f, #049cd9);
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#004d9f), to(#049cd9));
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#004D9F', endColorstr='#049CD9', GradientType=0); }
+  background-image: -webkit-gradient(linear, left top, left bottom, from(black), to(#909090));
+  background-image: -webkit-linear-gradient(black, #909090);
+  background-image: -moz-linear-gradient(black, #909090);
+  background-image: -o-linear-gradient(top, black, #909090);
+  background-image: -khtml-gradient(linear, left top, left bottom, from(black), to(#909090));
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#909090', GradientType=0); }
+
+.topbar-inner, .topbar .fill {
+  background-color: #004D9F;
+  background-color: #004D9F;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#049cd9), to(#004d9f));
+  background-image: -moz-linear-gradient(top, #049cd9, #004d9f);
+  background-image: -ms-linear-gradient(top, #049cd9, #004d9f);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cd9), color-stop(100%, #004d9f));
+  background-image: -webkit-linear-gradient(top, #049cd9, #004d9f);
+  background-image: -o-linear-gradient(top, #049cd9, #004d9f);
+  background-image: linear-gradient(top, #049cd9, #004d9f);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#049CD9', endColorstr='#004D9F', GradientType=0);
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25), inset 0 -1px 0 rgba(0, 0, 0, 0.1); }
