--- a/_source/_layouts/pages/submissions.haml
+++ b/_source/_layouts/pages/submissions.haml
@@ -10,4 +10,4 @@ title: Submissions
   Papers in PDF format must be submitted using
   %a{ :href => "http://www.easychair.org/conferences/?conf=socmedvis2012" }
     EasyChair
-  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop. All other accepted papers will be presented as posters during the poster session or interactive demo session.
+  by 2nd March 2012. A subset of the accepted papers will be invited for oral presentation at the workshop and will appear in the ICWSM'12 workshop proceedings. All other accepted papers will be presented as posters during the poster session or interactive demo session.
