--- a/_source/_layouts/pages/organizers_and_program_committee.haml
+++ b/_source/_layouts/pages/organizers_and_program_committee.haml
@@ -5,7 +5,7 @@ title: Organizers & Program Committee
 
 %h2
   Organizers
-%ul.unstyled
+%ul
   %li
     = succeed ", University College Dublin, daniel&#46;archambault&#64;ucd&#46;ie" do
       %a{ :href => "http://www.cliquecluster.org/content/daniel-archambault" } Daniel Archambault
@@ -17,5 +17,28 @@ title: Organizers & Program Committee
       %a{ :href => "http://www.martinharrigan.ie" } Martin Harrigan
 %h2
   Program Committee
-%p
-  To be announced.
+%ul
+  %li
+    = succeed ", TU Delft" do
+      %a{ :href => "http://fabianabel.de" } Fabian Abel
+  %li
+    = succeed ", L3S Research Center" do
+      %a{ :href => "http://www.l3s.de/~herder" } Eelco Herder
+  %li
+    = succeed ", INRIA Saclay" do
+      %a{ :href => "http://www.lri.fr/~fekete" } Jean-Daniel Fekete
+  %li
+    = succeed ", ETH Z&#252;rich" do
+      Christian Glahn
+  %li
+    = succeed ", Microsoft" do
+      %a{ :href => "http://research.microsoft.com/en-us/um/people/bongshin" } Bongshin Lee
+  %li
+    = succeed ", Social Media Research Foundation" do
+      %a{ :href => "http://www.connectedaction.net/marc-smith" } Marc Smith
+  %li
+    = succeed ", IBM Research" do
+      %a{ :href => "http://researcher.ibm.com/view.php?person=il-ADAMP" } Adam Perer
+  %li
+    = succeed ", Hong Kong University of Science and Technology" do
+      %a{ :href => "http://www.huamin.org/" } Huamin Qu
