--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -19,5 +19,16 @@ title: Overview
       New
     &nbsp;
     %b
+      7th Feb. 2012:
+    %a{ :href => "http://www.cs.umd.edu/~ben" } Ben Shneiderman
+    is the keynote speaker for the workshop. See the
+    %a{ :href => "/activities.html" } activities
+    page for more details.
+  %li
+    %b
+      7th Feb. 2012:
+    We have added the program committee.
+  %li
+    %b
       11th Jan. 2012:
     The website is live.
