--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -19,6 +19,9 @@ title: Overview
       New
     &nbsp;
     %b
+      The submission deadline has been extended until 7th March 2012.
+  %li
+    %b
       7th Feb. 2012:
     %a{ :href => "http://www.cs.umd.edu/~ben" } Ben Shneiderman
     is the keynote speaker for the workshop. See the
