--- a/_source/_layouts/pages/important_dates.haml
+++ b/_source/_layouts/pages/important_dates.haml
@@ -9,12 +9,18 @@ title: Important Dates
       %th
         Paper Submission Deadline
       %th
-        2nd March 2012
+        %del
+          2nd March 2012
+        &nbsp;
+        7th March 2012
     %tr
       %th
         Notification
       %th
-        16th March 2012
+        %del
+          16th March 2012
+        &nbsp;
+        20th March 2012
     %tr
       %th
         Paper Camera-Ready Deadline
