Highlighted the submission extension news.

--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -18,7 +18,7 @@ title: Overview
     %span.label.success
       New
     &nbsp;
-    %b
+    %b{ :style => "font-weight:bold; color: #ff3333;" }
       The submission deadline has been extended until 7th March 2012.
   %li
     %b
