The submission system is now closed

--- a/_source/_layouts/pages/call_for_papers.haml
+++ b/_source/_layouts/pages/call_for_papers.haml
@@ -33,7 +33,7 @@ title: Call for Papers
       &nbsp;
       7th March 2012
   %li
-    Notification:
+    Paper Notification:
     %del
       16th March 2012
     &nbsp;
