--- a/_source/_layouts/pages/important_dates.haml
+++ b/_source/_layouts/pages/important_dates.haml
@@ -15,7 +15,7 @@ title: Important Dates
         7th March 2012
     %tr
       %th
-        Notification
+        Paper Notification
       %th
         %del
           16th March 2012
