--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -18,6 +18,12 @@ title: Overview
     %span.label.success
       New
     &nbsp;
+    %b
+      8th Mar. 2012:
+    The submission system is now closed.
+  %li
+    %b
+      1st Mar. 2012:
     %b{ :style => "font-weight:bold; color: #ff3333;" }
       The submission deadline has been extended until 7th March 2012.
   %li
