Added the accepted paper list

--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -19,6 +19,12 @@ title: Overview
       New
     &nbsp;
     %b
+      25th Mar. 2012:
+    The
+    %a{ :href => "/schedule.html" } accepted paper list
+    is now out.
+  %li
+    %b
       8th Mar. 2012:
     The submission system is now closed.
   %li
