--- a/_source/_layouts/pages/activities.haml
+++ b/_source/_layouts/pages/activities.haml
@@ -29,7 +29,7 @@ title: Activities
   This session will take place at the beginning of the workshop and will allow any participant of the workshop to freely address the attendees for one minute. The session is free form and participants are encouraged to state their background, goals, and topics of interest with respect to visualization and social media. This event is an opportunity to understand the interests of all attendees and provides a venue to introduce directions of research. This session, at the
   = succeed "," do
     %a{ :href => "http://vialab.science.uoit.ca/textvis2011" } Interactive Visual Text Analytics for Decision Making workshop
-  was vibrant and was an excellent way to encourage participant interaction. If you would like to participate in the attendee fast forward, you can send an email to socmedvis&#64;ucd&#46;ie before attending the workshop.
+  was vibrant and was an excellent way to encourage participant interaction.
 %h2
   Applications Panel
 %p
