--- a/_source/_layouts/pages/index.haml
+++ b/_source/_layouts/pages/index.haml
@@ -19,6 +19,12 @@ title: Overview
       New
     &nbsp;
     %b
+      11th May 2012:
+    The
+    %a{ :href => "/schedule.html" } schedule
+    is now available.
+  %li
+    %b
       25th Mar. 2012:
     The
     %a{ :href => "/schedule.html" } accepted paper list
