Added panel members

--- a/_source/_layouts/pages/activities.haml
+++ b/_source/_layouts/pages/activities.haml
@@ -33,4 +33,14 @@ title: Activities
 %h2
   Applications Panel
 %p
-  This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry. The names of panel members are currently being finalized and will be posted shortly.
+  This panel includes participants with varied perspectives on the application of visualization to other academic disciplines and industry to understand social media data sources. Panel members are not from the visualization community, but are rather researchers from the social sciences and humanities as well as members of industry. The panel will include:
+%ul
+  %li
+    = succeed ", Humanities Institute Ireland (University College Dublin)" do
+      Karen Wade
+  %li
+    = succeed ", Storyful" do
+      %a{ :href => "http://storyful.com" } Paul M. Watson
+  %li
+    = succeed ", Twitter" do
+      %a{ :href => "http://www.umiacs.umd.edu/~jimmylin" } Jimmy Lin
